update:我非要提交这个打包后的文件

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "src/entrance/libTypes.ts",
   "unpkg": "hel_dist/index.html",
   "version": "1.5.1",
+  "repository": "https://github.com/bilibili-niang/remoteForVue.git",
   "files": [
     "hel_dist",
     "hel_proxy",
