--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,11 @@
 node_modules
 
 # webpack index entry 运行时代码
-hel_dist
+#hel_dist
 # npm module normal js 入口文件目录
-hel_proxy
+#hel_proxy
 # npm module esm js 入口文件目录
-hel_proxy_es
+#hel_proxy_es
 
 
 # local env files
